Milestone 2 - kolejne poprawki, zmiana formy osobowej w wiekszosci dokumentu.

--- a/thesis/01Wprowadzenie.tex
+++ b/thesis/01Wprowadzenie.tex
@@ -11,17 +11,17 @@ W kontekście uczelni technicznej, jaką jest Politechnika Poznańska, ankietowa
 
 W ostatnich latach\footnote{Mowa o okresie 2008-2013, który jest znany autorom niniejszej Pracy Dyplomowej.} Politechnika Poznańska posiadała szerokie spektrum narzędzi do pozyskiwania wiedzy o swoim działaniu i oferowanych usługach. Niestety, gros z nich wzajemnie się wykluczał. Przykładowy student na Wydziale Informatyki\footnote{Do 2010 roku -- Wydziale Informatyki i Zarządzania} poddawany był ankietom: elektronicznym na poziomie Uczelni, elektronicznym na poziomie Wydziału, ,,papierowym'' na poziomie Uczelni i Samorządu Studentów, a ponadto dodatkowej ankietyzacji w ramach niektórych zajęć dydaktycznych. Co gorsza, żaden spośród tych ,,systemów'' ankietyzacji nie posiada odpowiednich zabezpieczeń, wymaganych do zapewnienia wymierności ich wyników (jak zapewnienie, aby nikt nie wziął w ankiecie udziału więcej niż jeden raz, czy uniemożliwienie wypełnienia ankiety przeznaczonej dla innego wydziału, kierunku). Brak wymiernych efektów udziału w tych badaniach, podobnie jak ich mnogość i dezorientacja, kto tak naprawdę pozyskuje informacje, działała tu na niekorzyść ankietujących. Co jednak najważniejsze, istniała tylko jedna grupa docelowa -- studenci Politechniki Poznańskiej. \\
 
-Ustawa o Szkolnictwie Wyższym wymaga od uczelni wyższych badania nie tylko aktualnej społeczności studenckiej, lecz także jej absolwentów. Sprawdzane powinny być takie czynniki, jak rozwój karier czy satysfakcja z zapewnianych usług. Niestety, na Politechnice Poznańskiej brak jest odpowiednich narzędzi do prowadzenia tego rodzaju badań. Wracając więc do tego, co wspomniane zostało wcześniej, potencjalna katastrofa (jak chociażby niezauważony spadek jakości usług, prowadzący do zmniejszenia satysfakcji odbiorców i w efekcie spadku prestiżu Uczelni) to jedynie kwestia czasu. \\
+Ustawa o Szkolnictwie Wyższym wymaga od uczelni wyższych badania nie tylko aktualnej społeczności studenckiej, lecz także jej absolwentów. Sprawdzane powinny być takie czynniki, jak rozwój karier czy satysfakcja z zapewnianych usług. Niestety, na Politechnice Poznańskiej brak jest odpowiednich narzędzi do prowadzenia tego rodzaju badań. Wracając więc do tego, co wspomniane zostało wcześniej, potencjalna katastrofa (jak choćby niezauważony spadek jakości usług, prowadzący do zmniejszenia satysfakcji odbiorców i w efekcie spadku prestiżu Uczelni) to jedynie kwestia czasu. \\
 
 \subsection{Proponowane rozwiązanie}
-Na szczęście, problemu sprawnego ankietowania nie można porównywać z węzłem gordyjskim. Najłatwiejszym i -- w naszej opinii -- najbardziej popartym logicznymi argumentami rozwiązaniem jest stworzenie jednego, jednolitego, globalnego i prostego w obsłudze systemu prowadzenia badań i ankiet dla różnych grup docelowych, obejmujących wszystkich aktualnych i byłych studentów Politechniki Poznańskiej. Aby zapewnić dostępność oraz prostotę wdrożenia systemu, który na to pozwoli, zostanie on wykonany za pomocą technologii internetowych, co umożliwi też jego obsługę z użyciem dowolnej popularnej przeglądarki internetowej dostępnej na rynku. \\
+Na szczęście, problemu sprawnego ankietowania nie można porównywać z węzłem gordyjskim. Najłatwiejszym i -- w opinii autorów niniejszego dokumentu -- najbardziej popartym logicznymi argumentami rozwiązaniem jest stworzenie jednego, jednolitego, globalnego i prostego w obsłudze systemu prowadzenia badań i ankiet dla różnych grup docelowych, obejmujących wszystkich aktualnych i byłych studentów Politechniki Poznańskiej. Aby zapewnić dostępność oraz prostotę wdrożenia systemu, który na to pozwoli, zostanie on wykonany za pomocą technologii internetowych, co umożliwi też jego obsługę z użyciem dowolnej popularnej przeglądarki internetowej dostępnej na rynku. \\
 
-W trakcie analizy problemu, wraz z Kierownikiem Projektu oraz jego Architektem, doszliśmy do wniosku, że koniecznym będzie także zapewnienie swojego rodzaju ,,zachęty'' dla potencjalnych Respondentów -- o ile bowiem studentowi może zależeć na rozwoju jego uczelni, o tyle absolwent nie będzie czerpał z tego tytułu żadnych korzyści. Nasze rozwiązanie obejmuje więc także element zachęcający do korzystania z systemu, jakim jest dostęp dla Respondentów do unikalnych materiałów dydaktyczno-naukowych. \\
+W trakcie analizy problemu ustalono też, że koniecznym będzie także zapewnienie swojego rodzaju ,,zachęty'' dla potencjalnych Respondentów -- o ile bowiem studentowi może zależeć na rozwoju jego uczelni, o tyle absolwent nie będzie czerpał z tego tytułu żadnych korzyści. Wybrane dla iQuest rozwiązanie obejmuje więc także element zachęcający do korzystania z systemu, jakim jest dostęp dla Respondentów do unikalnych materiałów dydaktyczno-naukowych. \\
 
 Aby zapewnić, że pozyskane dane są prawidłowe, w proponowanym rozwiązaniu znajdą się systemy autoryzacji osób uzyskujących dostęp do badań i ankiet. Jest to jednak jedyny element wymagający sprawdzenia tożsamości Respondenta -- same wyniki będą całkowicie anonimowe. \\
 
 \section{Ograniczenia i zagrożenia dla projektu}
-Największym ograniczeniem, a zarazem zagrożeniem dla projektu jest czas. Na projektowanie, implementację i wdrożenie rozwiązania przewidziany jest jedynie okres od września 2012, do lutego 2013. Wynika to właśnie z faktu, iż projekt ten jest bezpośrednio związany z niniejszą Pracą Dyplomową. Dodatkowym zagrożeniem jest fakt braku wcześniejszego doświadczenia przy realizacji projektów opartych na technologiach internetowych.
+Największym ograniczeniem, a zarazem zagrożeniem dla projektu jest czas. Na projektowanie, implementację i wdrożenie rozwiązania przewidziany jest jedynie okres od września 2012, do lutego 2013. Wynika to z faktu, iż projekt ten jest bezpośrednio związany z niniejszą Pracą Dyplomową. Dodatkowym zagrożeniem jest brak wcześniejszego doświadczenia zespołu przy realizacji projektów opartych na technologiach internetowych.
 
 \section{Cele projektu}
 Celem projektu \textit{iQuest} jest zbudowanie systemu umożliwiającego łatwe przeprowadzanie ankiet wśród studentów i absolwentów uczelni. System powinien:
