--- a/thesis/thesis-bachelor-polski.tex
+++ b/thesis/thesis-bachelor-polski.tex
@@ -10,6 +10,7 @@
 \usepackage[table]{xcolor}
 \usepackage{mat}
 \usepackage{verbatim}
+\usepackage{pdflscape}
 
 \hyphenation{roz-sze-rza-ją-cych}
 
