Wstępna wersja milestone 3 - brakuje jeszcze zmian w waszych treściach i paru kwestii w architekturze

--- a/thesis/02Biznes.tex
+++ b/thesis/02Biznes.tex
@@ -21,6 +21,7 @@ W systemie zdefiniowani są następujący aktorzy:
 W ramach systemu iQuest, zdefiniowane są cztery obiekty biznesowe. Mowa o Badaniu, Ankiecie, Grupie Docelowej i Raporcie.
 
 \subsection{Badanie}
+\label{Chapter221}
 
 Jest to Ankieta wraz z wybranymi: grupą docelową i czasem trwania. Badanie determinują następujące atrybuty:
 
@@ -34,6 +35,7 @@ Jest to Ankieta wraz z wybranymi: grupą docelową i czasem trwania. Badanie det
 \end{itemize}
 
 \subsection{Ankieta}
+\label{Chapter222}
 
 Jest tworzona przez Ankieterów i wysyłana do Respondentów. Raz utworzona Ankieta zostaje zapisana w Katalogu Ankiet. Ankietę charakteryzują następujące atrybuty:
 
@@ -45,6 +47,7 @@ Jest tworzona przez Ankieterów i wysyłana do Respondentów. Raz utworzona Anki
 \end{itemize}
 
 \subsection{Grupa Docelowa}
+\label{Chapter223}
 
 Grupa studentów lub absolwentów, do których skierowana jest ankieta. Atrybuty:
 
@@ -53,6 +56,7 @@ Grupa studentów lub absolwentów, do których skierowana jest ankieta. Atrybuty
 \end{itemize}
 
 \subsection{Raport}
+\label{Chapter224}
 
 Zebrane odpowiedzi z jednego lub z kilku badań. Może zawierać wykresy, zestawienia.
 
@@ -78,6 +82,7 @@ Zebrane odpowiedzi z jednego lub z kilku badań. Może zawierać wykresy, zestaw
 Poniżej przedstawione zostały biznesowe przypadki użycia. Obejmują one dwa główne zagadnienia: zbieranie informacji oraz zarządzanie Grupami Docelowymi.
 
 \subsection{BC01: Zbieranie informacji o Absolwentach}
+\label{Chapter231}
 
 \ucsection{BC01: Zbieranie informacji o Absolwentach}{Ankieter, Respondent}
 {Ankieter chce ankietować Absolwentów}
@@ -99,6 +104,7 @@ Poniżej przedstawione zostały biznesowe przypadki użycia. Obejmują one dwa g
 {}
 
 \subsection{BC02: Zbieranie informacji o Studentach}
+\label{Chapter232}
 
 \ucsection{BC02: Zbieranie informacji o Studentach}{Ankieter, Respondent}
 {Ankieter chce ankietować Studentów}
@@ -113,6 +119,7 @@ Poniżej przedstawione zostały biznesowe przypadki użycia. Obejmują one dwa g
 {}
 
 \subsection{BC03: Zarządzanie Grupami Docelowymi}
+\label{Chapter233}
 
 \ucsection{BC03: Zarządzanie Grupami Docelowymi}{Administrator Bazy Danych}
 {Ankieter chce ankietować Studentów}
