--- a/thesis/09Zakonczenie.tex
+++ b/thesis/09Zakonczenie.tex
@@ -4,9 +4,11 @@
 \section{Podsumowanie}
 \label{Chapter91}
 
+{\color{red}Do uzupełnienia pod koniec prac.}
 %Podsumowanie powstałego systemu, czy przedsięwzięcie się udało, czy to się nadaje do czegokolwiek. Taki ładny epilog na koniec pracy inżynierskiej.
 
 \section{Propozycja dalszych prac}
 \label{Chapter92}
 
+{\color{red}Do uzupełnienia pod koniec prac.}
 %Być może system wymaga jakichś prac w przyszłości lub są jakieś propozycje rozszerzenia funkcjonalności. Dotyczy to zarówno tego, co być może sami będziecie dalej robić (jeśli Wam oczywiście zapłacą) lub mają po Was przejąć inne osoby (z następnymi rocznikami włącznie).
