--- a/thesis/01Wprowadzenie.tex
+++ b/thesis/01Wprowadzenie.tex
@@ -5,28 +5,38 @@
 \label{Chapter11}
 
 \subsection{Problem}
-Podstawą każdej działalności jest warunkująca ją potrzeba. Niemożliwą jest jednak analiza potrzeb, bez wcześniejszego ich zbadania. Najłatwiejszą i najbardziej rozpowszechnioną metodą pozyskiwania wiedzy na jakiś temat jest pytanie o to osób związanych ze sprawą. Kiedy pytań jest wiele, a liczba potencjalnych respondentów osiąga niewyobrażalny poziom, zadawanie pytań wymaga usystematyzowania, podobnie, jak metodyka ich dostarczania do odpowiadających i gromadzenia odpowiedzi. Rozumując w ten sposób, ponownie wynajdujemy niezwykłe narzędzie badań, pozwalające na analizę danych i prowadzenie zaawansowanych statystyk. Mowa o ankiecie. \\
+\label{Chapter111}
 
-W kontekście uczelni technicznej, jaką jest Politechnika Poznańska, ankietowanie jest niezbędne do jej prawidłowej pracy. Bez informacji zwrotnej (ang.~\definicja{feedback}) praktycznie nie ma możliwości sprawdzenia poprawności podejmowanych działań, co w efekcie zawsze będzie prowadzić do katastrofy. \\
+Podstawą każdej działalności jest warunkująca ją potrzeba. Niemożliwą jest jednak analiza potrzeb, bez wcześniejszego ich zbadania. Najłatwiejszą i najbardziej rozpowszechnioną metodą pozyskiwania wiedzy na jakiś temat jest pytanie o to osób związanych ze sprawą. Kiedy pytań jest wiele, a liczba potencjalnych respondentów osiąga niewyobrażalny poziom, zadawanie pytań wymaga usystematyzowania, podobnie, jak metodyka ich dostarczania do odpowiadających, czy gromadzenia odpowiedzi. Takie rozumowanie prowadzi do niezwykłego narzędzia badań, pozwalającego na gromadzenie danych - ankiety. \\
 
-W ostatnich latach\footnote{Mowa o okresie 2008-2013, który jest znany autorom niniejszej Pracy Dyplomowej.} Politechnika Poznańska posiadała szerokie spektrum narzędzi do pozyskiwania wiedzy o swoim działaniu i oferowanych usługach. Niestety, gros z nich wzajemnie się wykluczał. Przykładowy student na Wydziale Informatyki\footnote{Do 2010 roku -- Wydziale Informatyki i Zarządzania} poddawany był ankietom: elektronicznym na poziomie Uczelni, elektronicznym na poziomie Wydziału, ,,papierowym'' na poziomie Uczelni i Samorządu Studentów, a ponadto dodatkowej ankietyzacji w ramach niektórych zajęć dydaktycznych. Co gorsza, żaden spośród tych ,,systemów'' ankietyzacji nie posiada odpowiednich zabezpieczeń, wymaganych do zapewnienia wymierności ich wyników (jak zapewnienie, aby nikt nie wziął w ankiecie udziału więcej niż jeden raz, czy uniemożliwienie wypełnienia ankiety przeznaczonej dla innego wydziału, kierunku). Brak wymiernych efektów udziału w tych badaniach, podobnie jak ich mnogość i dezorientacja, kto tak naprawdę pozyskuje informacje, działała tu na niekorzyść ankietujących. Co jednak najważniejsze, istniała tylko jedna grupa docelowa -- studenci Politechniki Poznańskiej. \\
+Ankieta pozwala na nieinwazyjne, anonimowe i masowe pozyskiwanie opinii respondentów na zadany temat, a dzięki zastosowaniu różnych metod statystycznych, także na ocenę zdania całej populacji. W kontekście jednostki szkolnictwa wyższego, jaką jest Politechnika Poznańska, ankietowanie jest niezbędne do zapewnienia prawidłowej pracy. Bez informacji zwrotnej (ang.~\definicja{feedback}) praktycznie nie ma możliwości sprawdzenia poprawności podejmowanych działań, co w efekcie zawsze będzie prowadzić do spiętrzającej się fali problemów. Przykładem może być sytuacja, gdy nie posiadając wiedzy o nieodpowiednim, zdaniem studentów i prowadzących zajęcia, wyposażeniu sali laboratoryjnej, władze uczelni ustalają harmonogram zajęć, zwiększający obciążenie tego pomieszczenia. Efektem takiego działania byłby spadek jakości kształcenia studentów korzystających z tego laboratorium. \\
 
-Ustawa o Szkolnictwie Wyższym wymaga od uczelni wyższych badania nie tylko aktualnej społeczności studenckiej, lecz także jej absolwentów. Sprawdzane powinny być takie czynniki, jak rozwój karier czy satysfakcja z zapewnianych usług. Niestety, na Politechnice Poznańskiej brak jest odpowiednich narzędzi do prowadzenia tego rodzaju badań. Wracając więc do tego, co wspomniane zostało wcześniej, potencjalna katastrofa (jak choćby niezauważony spadek jakości usług, prowadzący do zmniejszenia satysfakcji odbiorców i w efekcie spadku prestiżu Uczelni) to jedynie kwestia czasu. \\
+W ostatnich latach\footnote{Mowa o okresie 2008-2013, który jest znany autorom niniejszej Pracy Dyplomowej.} Politechnika Poznańska posiadała szerokie spektrum narzędzi do pozyskiwania wiedzy o swoim działaniu i oferowanych usługach. Niestety, gros z nich wzajemnie się wykluczał. Przykładowy student na Wydziale Informatyki\footnote{Do 2010 roku -- Wydziale Informatyki i Zarządzania} poddawany był ankietom: elektronicznym na poziomie Uczelni, jak i Wydziału, ,,papierowym'' na poziomie Uczelni oraz Samorządu Studentów, a ponadto dodatkowej ankietyzacji w ramach niektórych zajęć dydaktycznych. Co gorsza, żaden spośród tych ,,systemów'' ankietyzacji nie posiadał odpowiednich zabezpieczeń, wymaganych do zapewnienia wymierności ich wyników (jak np.~zapewnienie, aby nikt nie wziął w ankiecie udziału więcej niż jeden raz, czy uniemożliwienie wypełnienia ankiety przeznaczonej dla innego wydziału, kierunku). Brak wymiernych efektów udziału w tych badaniach, podobnie jak ich mnogość i dezorientacja, kto tak naprawdę pozyskuje informacje, działały tu na niekorzyść ankietujących. Ważnym jest też fakt, że istniała tylko jedna grupa docelowa -- studenci Politechniki Poznańskiej. \\
+
+Ustawa o Szkolnictwie Wyższym wymaga od uczelni wyższych badania nie tylko aktualnej społeczności studenckiej, lecz także jej absolwentów. Sprawdzane powinny być takie czynniki, jak rozwój karier czy satysfakcja z zapewnianych usług. Niestety, na Politechnice Poznańskiej brak jest odpowiednich narzędzi do prowadzenia tego rodzaju badań. Nawiązując więc do wcześniejszych twierdzeń, potencjalna katastrofa (jak niezauważony spadek jakości usług, prowadzący do zmniejszenia satysfakcji odbiorców ze względu na brak podjęcia odpowiednich działań i w efekcie spadku prestiżu Uczelni) to jedynie kwestia czasu. \\
 
 \subsection{Proponowane rozwiązanie}
-Na szczęście, problemu sprawnego ankietowania nie można porównywać z węzłem gordyjskim. Najłatwiejszym i -- w opinii autorów niniejszego dokumentu -- najbardziej popartym logicznymi argumentami rozwiązaniem jest stworzenie jednego, jednolitego, globalnego i prostego w obsłudze systemu prowadzenia badań i ankiet dla różnych grup docelowych, obejmujących wszystkich aktualnych i byłych studentów Politechniki Poznańskiej. Aby zapewnić dostępność oraz prostotę wdrożenia systemu, który na to pozwoli, zostanie on wykonany za pomocą technologii internetowych, co umożliwi też jego obsługę z użyciem dowolnej popularnej przeglądarki internetowej dostępnej na rynku. \\
+\label{Chapter112}
 
-W trakcie analizy problemu ustalono też, że koniecznym będzie także zapewnienie swojego rodzaju ,,zachęty'' dla potencjalnych Respondentów -- o ile bowiem studentowi może zależeć na rozwoju jego uczelni, o tyle absolwent nie będzie czerpał z tego tytułu żadnych korzyści. Wybrane dla iQuest rozwiązanie obejmuje więc także element zachęcający do korzystania z systemu, jakim jest dostęp dla Respondentów do unikalnych materiałów dydaktyczno-naukowych. \\
+Szczęśliwie, problemu sprawnego ankietowania nie można porównywać z węzłem gordyjskim. Najłatwiejszym i -- w opinii autorów niniejszego dokumentu -- najlepiej popartym logicznymi argumentami rozwiązaniem, jest stworzenie jednego, jednolitego, globalnego i prostego w obsłudze systemu prowadzenia badań i ankiet dla różnych grup docelowych, obejmujących wszystkich aktualnych i byłych studentów Politechniki Poznańskiej. Aby zapewnić dostępność oraz prostotę wdrożenia systemu, który na to pozwoli, zostanie on wykonany za pomocą technologii internetowych, co umożliwi też jego obsługę z użyciem dowolnej popularnej przeglądarki internetowej dostępnej na rynku. \\
+
+W trakcie analizy problemu ustalono, że koniecznym będzie także zapewnienie swojego rodzaju ,,zachęty'' dla potencjalnych Respondentów -- o ile bowiem studentowi może zależeć na rozwoju jego uczelni, o tyle absolwent nie będzie czerpał z tego tytułu żadnych wymiernych korzyści. Wybrane dla iQuest rozwiązanie obejmuje więc też element zachęcający do korzystania z systemu, jakim jest dostęp dla Respondentów do unikalnych materiałów dydaktyczno-naukowych. \\
 
 Aby zapewnić, że pozyskane dane są prawidłowe, w proponowanym rozwiązaniu znajdą się systemy autoryzacji osób uzyskujących dostęp do badań i ankiet. Jest to jednak jedyny element wymagający sprawdzenia tożsamości Respondenta -- same wyniki będą całkowicie anonimowe. \\
 
 \section{Ograniczenia i zagrożenia dla projektu}
-Największym ograniczeniem, a zarazem zagrożeniem dla projektu jest czas. Na projektowanie, implementację i wdrożenie rozwiązania przewidziany jest jedynie okres od września 2012, do lutego 2013. Wynika to z faktu, iż projekt ten jest bezpośrednio związany z niniejszą Pracą Dyplomową. Dodatkowym zagrożeniem jest brak wcześniejszego doświadczenia zespołu przy realizacji projektów opartych na technologiach internetowych.
+\label{Chapter12}
+
+Największym ograniczeniem, a zarazem zagrożeniem dla projektu jest kwestia zachęty studentów i absolwentów do korzystania z nowego systemu ankietowania. Popularność całego systemu zależy w głównej mierze właśnie od tego, jakie materiały będą za jego pośrednictwem udostępniane oraz jakie będą warunki uzyskania dostępu do nich. Kolejnym ograniczeniem jest wyznaczony z góry termin zakończenia prac. Na projektowanie, implementację i wdrożenie rozwiązania przewidziany jest jedynie okres od września 2012, do lutego 2013. Uzupełniając tę kwestię o fakt braku wcześniejszego doświadczenia zespołu przy realizacji projektów opartych na technologiach internetowych, spełnienie wszystkich wymagań związanych z projektem może okazać się utrudnione. \\
+
+Ostatecznie jednak, w fazie tworzenia, kwestia zachęty dla Respondentów może być potraktowana jako poboczna. Kwestię ograniczonego czasu można nadrobić, stosując odpowiednie metody zarządzania czasem, zaś brak doświadczenia -- nadrobić w wolnych chwilach. Można więc uznać, że projekt nie posiada żadnych ważkich ograniczeń, czy zagrożeń, które mogłyby uniemożliwić jego realizację. \\
 
 \section{Cele projektu}
-Celem projektu \textit{iQuest} jest zbudowanie systemu umożliwiającego łatwe przeprowadzanie ankiet wśród studentów i absolwentów uczelni. System powinien:
+\label{Chapter13}
+
+Celem projektu \textit{iQuest} jest zbudowanie systemu umożliwiającego łatwe przeprowadzanie ankiet wśród studentów i absolwentów uczelni. System ten powinien:
 \begin{itemize}
-\item{współpracować z innymi systemami funkcjonującymi na uczelni (np. Sokrates)}
+%pozafunkcjonalne!!! \item{współpracować z innymi systemami funkcjonującymi na uczelni (np. Sokrates)}
 \item{oferować dużą elastyczność:
 \begin{itemize}
 \item{przy definiowaniu różnorodnych ankiet}
@@ -39,9 +49,9 @@ Celem projektu \textit{iQuest} jest zbudowanie systemu umożliwiającego łatwe 
 \end{itemize}
 
 \section{Omówienie pracy}
-\label{Chapter12}
+\label{Chapter14}
 
-{\color{red}Do uzupełnienia później}
+{\color{red}Do uzupełnienia po ukończeniu reszty pracy}
 
 %Tutaj piszemy o celu samego dokumentu oraz ewentualnych konwencjach, jakie przyjęliśmy podczas opisywania różnych rzeczy. Dla systemu BIS-2 ten fragment wyglądał tak:
 %
