--- a/thesis/08Wnioski/08Wnioski-KU.tex
+++ b/thesis/08Wnioski/08Wnioski-KU.tex
@@ -1,22 +1,10 @@
-\chapter{Zebrane doświadczenia}
-\label{Chapter8}
-%NINIEJSZY PLIK ZAWIERA RĘCZNY MERGE Z PLIKÓW POJEDYNCZYCH
-{\color{red}Wersja bez redakcji; zostanie zmieniony sposób podziału na chronologiczny; zostaną rodzielone problemy i ich rozwiązania od doświadczeń i wniosków, oraz przeniesione do działu implementacji\slash architektury.}
+%jako, że ma tu być podział chronologiczny, musicie pisać swoje części w osobnych plikach, a ja dokonam podziału chronologicznego i zmerge'uję to samodzielnie. Sądzę, że jest to znacznie bezpieczniejsze rozwiązanie, niż zabawa w merge'owanie jednego pliku u 4 osób w sposób rozproszony...
 
 \section{Problemy i ich rozwiązania}
-\subsection{Maciej Trojan}
-\subsubsection{Inicjalizacja bazy danych}
-Moduł iQuest do działania wymaga rozszerzenie istniejącej bazy danych platformy \emph{Moodle} o dodatkowe tabele, przechowujące niezbędne dane wykorzystywane do spełnienia założonej funkcjonalności.
+\label{Chapter81}
 
-Do zaimportowania bazy danych przygotowanej przez architekta wykorzystano narzędzie, wbudowane w platformę \emph{Moodle}, \emph{XMLDB}, które gwarantuje bezobsługową instalację modułu w przyszłości. Jak się później okazało narzędzie to posiada błąd, który uniemożliwia zaimportowania kluczy obcych. Wymagało to od programistów ręcznego utworzenia wszystkich kluczy obcych, przewidzianych przez architekta.
-
-\subsubsection{Instalacja modułu}
-Postanowiono, że wraz z instalacją modułu powinień automatycznie tworzyć się odpowiedni \emph{kurs} związany jedynie z modułem \emph{iQuest}. Zmniejsza to potrzebny czas na przygotowanie platformy do użytku, oraz zapobiega pomyłkom związanych z ręcznym tworzeniem i konfiguracji \emph{kursu}. 
-
-Niestety okazało się, że podejście to uniemożliwia instalację modułu jednocześnie z całą platformą \emph{Moodle}, ponieważ dodatkowe moduły instalowane są przed mechanizmami pozwalającymi na tworzenie \emph{kursu}. Doinstalowanie modułu do zainstalowanej platformy nie powoduje żadnych komplikacji.
-
-\subsection{Krzysztof Urbaniak}
-\subsubsection{Wprowadzenie}
+\subsection{Wprowadzenie}
+%label do uzupełnienia po merge'u
 Na początku tego rozdziału należy przypomnieć, główne pojęcia związane z korzystaniem z platformy \emph{Moodle}.
 
 Po zalogowaniu do systemu użytkownik musi wybrać \emph{kurs}. Kurs jest największą częścią \emph{Moodle} i przeważnie kojarzony jest z przedmiotem. Na kurs składa się kilka lub kilkanaście \emph{sekcji}. Sekcja odpowiada najczęściej konkretnym zajęciom, jest związana z jakimś wydarzeniem lub tygodniem. Najmniejszą jednostką w \emph{Moodle} jest \emph{aktywność}. Aktywność to podstawowy typ modułów rozszerzających funkcjonalność \emph{Moodle}. Aktywnościami są np. \emph{Forum}, \emph{Głosowanie}, \emph{Czat}. Istnieje również inny typ modułów: \emph{zasoby}. Są to m.in. własne strony internetowe, pliki, adresy \emph{URL}. Na potrzeby projektu została wyróżniona grupa \emph{materiały}. Zalicza się do niej wszystkie moduły inne niż \emph{iQuest}, czyli inne niż badania. Moduły grupowane są w sekcje.
@@ -31,7 +19,8 @@ Jako, że rozdział ten tyczy się grafiki, warto wspomnieć, że elementy na st
 \item Wewnątrz każdej sekcji znajduje się lista badań. Pod nią drukowana jest lista materiałów.
 \end{description}
 
-\subsubsection{Formularze}
+\subsection{Formularze}
+%label do uzupełnienia po merge'u
 Projektując graficzny interfejs użytkownika, prędzej czy później pojawia się potrzeba wyboru narzędzia do projektowania formularzy. Rozważano kilka możliwości. Po pierwsze, użycie po prostu czystego języka \emph{HTML}. Drugą opcją było użycie wbudowanych w \emph{Moodle} \emph{API} -- \emph{Form API} lub \emph{Output API}. Jako trzecią możliwość rozważano użycie zewnętrznych \emph{API} -- nie związanych z \emph{Moodle}.
 
 Odrzucono pomysł pierwszy oraz trzeci. Pomysł pierwszy wydał się zbyt pracochłonny. Z uwagi na dość mocno ograniczony czas, nie chciano programować czegoś od początku samemu, skoro wcześniej zostało to już przez kogoś napisane. Nawet kosztem tego, że interfejs nie wyglądał dokładnie tak, jak go zaprojektowano. Na pierwszym miejscu stawiano jego kompletność. Wariant trzeci był nie zgodny z założeniem mówiącym o korzystaniu z interfejsów \emph{Moodle} tam, gdzie to możliwe. Nie chciano, żeby użytkownik poczuł, że programowana wtyczka nie jest częścią systemu \emph{Moodle}. Co więcej, interfejs odbiegałby od wyglądu \emph{Moodle} i mógłby zostać oceniony jako nieintuicyjny. W pierwszej kolejności zdecydowano się korzystać z \emph{Output API}.
@@ -42,10 +31,12 @@ Po \emph{Output API} wybrano \emph{Form API}. Ku rozczarowaniu zespołu \emph{Fo
 
 Podsumowując, mimo niekompletnej dokumentacji, jako narzędzie implementacji formularzy, zostało wybrane \emph{Form API}. Mimo wielu jego zalet, oczywiście nie wszystkie potrzebne elementy udało się napisać używając jedynie \emph{API}. Korzystano wtedy z czystego języka \emph{HTML}. 
 
-\subsubsection{Role}
+\subsection{Role}
+%label do uzupełnienia po merge'u
 Jedną z cech projektu, jest podział użytkowników na ankieterów i respondentów. W systemie \emph{Moodle} istnieje mechanizm do zarządzania rolami, który wydawał się adekwatny do użycia w tym przypadku. Rola jest to zbiór \emph{możliwości}. Możliwość można rozumieć jako prawo do wykonania, określonego przez programistę fragmentu kodu.
 
-\subsubsection{Formater kursu}
+\subsection{Formater kursu}
+%label do uzupełnienia po merge'u
 Jednym z problemów jakie napotkano, była konieczność wyświetlania respondentom i ankieterom tylko określonych modułów. Ankieterzy powinni zobaczyć tylko te badania, które utworzyli oraz inne aktywności, zasoby. Respondenci powinni zobaczyć tylko te badania, w których mogą wypełnić ankietę, a także materiały, które mają prawo wyświetlać.
 
 Do rozwiązania problemu zdecydowano się użyć formatera kursu. Narzędzie to, jako integralna część \emph{Moodle}, było najlepszym rozwiązaniem z możliwych. Niestety wkrótce okazało się, że brak dokumentacji, a także dyskusji na temat tego narzędzia w internecie utrudnia wykonanie zadania. Całą pracę wejścia, polegającą na poznaniu narzędzia, wykonano studiując kod źródłowy domyślnych formaterów \emph{Moodle}.
@@ -56,7 +47,8 @@ Zostało to spowodowane uaktualnieniami w \emph{Moodle}. Kod \emph{PHP} wyświet
 
 Rozwiązaniem było umieszczenie listy badań oraz listy materiałów w jednej sekcji. Można w niej dodać jakikolwiek moduł. Dopiero przy wyświetlaniu moduły dzielone są na dwie listy: listę badań i listę materiałów. Dzięki temu cel został osiągnięty -- użytkownik zobaczy tylko te moduły, które może wyświetlić. Co więcej, będą one odpowiednio posegregowane, aby użytkownik szybko mógł znaleźć to, czym jest zainteresowany.
 
-\subsubsection{Tworzenie badania}
+\subsection{Tworzenie badania}
+%label do uzupełnienia po merge'u
 Kolejną trudnością w projekcie, było połączenie wtyczki z systemem \emph{Moodle}. Głównie sprowadzało się to do tego, aby tak wykorzystać interfejs graficzny oferowany przez \emph{Moodle}, żeby użytkownik nie miał poczucia zmiany systemu. Zarówno wygląd, jak i dodawanie różnych funkcji, powinny być zgodne ze standardem \emph{Moodle}. Dzięki takiemu podejściu, osoba, korzystająca wcześniej z \emph{Moodle}, a pragnąca używać wtyczki \emph{iQuest}, nie musiała zmieniać swoich przyzwyczajeń. Co więcej, w projekcie duży nacisk został postawiony na nie zniechęcanie respondentów do wypełnienia ankiety, co było dodatkową motywacją do zaprojektowania przyjaznego użytkownikom interfejsu.
 
 Wstępna wersja interfejsu, zaprojektowana przez architekta, wyglądała następująco. Najpierw ankieter wyrażał chęć utworzenia nowego badania, klikając odpowiedni przycisk. Następnie mógł dodać do badania ankietę z katalogu, ewentualnie utworzyć nową. Na kolejnej stronie ankieter definiował szczegóły badania, takie jak: nazwa, grupa docelowa, czas rozpoczęcia i zakończenia etc. Niestety, nie było możliwe, aby zaimplementować to w powyższy sposób.
@@ -65,7 +57,8 @@ Problem stwarzało dodawanie ankiety wewnątrz tworzenia badania. Gdy tworzenie 
 
 Rozwiązaniem jest prosta zamiana kolejności tworzenia badania oraz ankiety. Najpierw użytkownik tworzy badanie, czyli moduł. Dopiero wówczas ma możliwość sporządzenia ankiety. Podejście to ma kilka zalet: jest to zgodne z procedurą \emph{Moodle}, a co za tym idzie, bardziej intuicyjne dla użytkownika obeznanego z \emph{Moodle} oraz pozwala na łatwe dodanie ankiety do badania. Ponadto ankieter może zrezygnować z komponowania ankiety przy kreowaniu badania. Nie sposób nie zgodzić się z tezą, że jest to jedyny słuszny sposób dodawania nowego modułu \emph{iQuest}.
 
-\subsubsection{Tworzenie ankiety}
+\subsection{Tworzenie ankiety}
+%label do uzupełnienia po merge'u
 Przy tworzeniu ankiety powstał dość specyficzny problem implementacyjny. Wynikał on z faktu, że ankietę definiować można zarówno z poziomu kursu, jak i z poziomu badania. Powstało pytanie: Jak przetwarzać dane pochodzące z różnych kontekstów? 
 
 Standardowo, we wtyczkach Moodle, elementy odpowiedzialne za wyświetlanie informacji na ekranie znajdują się w pliku \emph{view.php}. Pojawił się pomysł, aby rozszerzyć strukturę o dwa dodatkowe pliki: \emph{mod.php} oraz \emph{course.php}. Do pliku \emph{mod.php} trafiały dane z kontekstu modułu. Drugi plik zajmował się przetwarzaniem danych z kontekstu kursu. Taki podział gwarantował większy porządek w kodzie źródłowym. Porządek był ważny, ponieważ w \emph{Moodle} nie jest zgodny z wzorcem Model-View-Controller. W związku z tym istotne jest aby efektywnie zarządzać kodem źródłowym, żeby mała jego zmiana nie wymagała zmiany wielu elementów.
@@ -74,7 +67,8 @@ Niestety wprowadzone zmiany okazały się niewystarczające. Występowało niepo
 
 Dzięki utworzeniu trzech dodatkowych plików, kod źródłowy stał się bardziej przejrzysty. Wartość takiego rozwiązania można zauważyć dopiero, gdy zachodzi konieczność znalezienia błędu lub wprowadzenia zmian. Przy dobrym zarządzaniu kodem mała zmiana wymaga małych zmian.
 
-\subsubsection{Inwencja programistów}
+\subsection{Inwencja programistów}
+%label do uzupełnienia po merge'u
 
 W trakcie rozwoju oprogramowania pojawiło się kilka małych niejasności, które należało rozwiązać. Kilka razy wykazano również inicjatywę i zaproponowano rozwiązania, które stały się ostatecznie częścią projektu.
 
@@ -88,28 +82,12 @@ Kolejnym pomysłem było dodanie kilku przycisków. Zarówno w katalogu jak i wi
 
 W założeniach projektu ustalono, że odpowiedź jest nieedytowalna. Dodano udoskonalenie, które polegało na tym, że respondent nie musi od razu wypełnić całej ankiety. Może to robić stopniowo. Za każdym razem jednak zostaną mu wyświetlone tylko te pytania, na które jeszcze nie odpowiedział. Pozwala to także uniknąć sytuacji, w której respondent przeoczy jakieś pytania. Jeśli respondent nie wypełni całej ankiety, to badanie nie zniknie z widoku kursu. Dopiero po wypełnieniu całej ankiety badanie nie pokaże się w kursie.
 
-\subsubsection{Hierarchia CSS}
+\subsection{Hierarchia CSS}
+%label do uzupełnienia po merge'u
+
 Na wielu poziomach serwisu borykano się z problemem hierarchii plików \emph{CSS}. Budowniczowie systemu \emph{Moodle} po, jak zapewniają, gruntownym przemyśleniu sprawy i rozważeniu wszystkich możliwości wymyślili następującą hierarchię kaskadowych arkuszy stylów.
 \begin{description}
 \item Najważniejsze są pliki umieszczone w katalogu \emph{theme} odnoszące się do całej platformy \emph{Moodle}.
 \item Następnie uwzględniane są reguły z pliku \emph{styles.css} umieszczonego w katalogu konkretnej wtyczki.
 \end{description}
 Główną wadą tego podejścia jest to, że nie można we wtyczce nadpisać właściwości, która została zdefiniowana w katalogu \emph{theme}. Aby zmienić choćby jedną właściwość z tego katalogu należy utworzyć nowy wygląd, kopiując stary i zmieniając tę jedyną właściwość. Następnie administrator musi ustawić ten wygląd w swoim systemie (co wiąże się z dodatkową operacją jeśli poprzedni wygląd był wyglądem domyślnym).
-
-\subsection{Łukasz Wieczorek}
-\subsubsection{Mapowanie obiektowo-relacyjne}
-Mapowanie obiektowo-relacyjne pozwala uprościć operacje na danych przechowywanych w bazie danych poprzez udostępnienie ich programiście w postaci obiektowej.\\
-System \emph{iQuest} operuje na klasach takich jak: ankieta, badanie, grupa docelowa, członek grupy docelowej, uprawnienie dostępu, pytanie (i potomne), odpowiedź, zadanie, praca w tle, etc. Początkowo architekt stworzył diagram klas na którym każda klasa miała wyróżnione publiczne metody \emph{insert, update, delete}. Niestety takie rozwiązanie spowodowało powielenie dużej ilości kodu związanego z interakcją z bazą danych. W ramach refaktoryzacji podjąłem się zadania stworzenia klas, które wzorem nowoczesnych systemów \emph{ORM} uproszczą projektowanie nowych klas reprezentujących dane. Ze względu na silną integrację z mechanizmami \emph{Moodle} w grę nie wchodziły gotowe rozwiązania. Autorskie rozwiązanie korzysta z mechanizmów \emph{Moodle Data manipulation API} oraz mechanizmu refleksji języka PHP, by pozwolić programiście korzystającego z tego rozwiązania na proste pobieranie i manipulację obiektami przechowywanymi w bazie danych. Diagram UML przedstawia się następująco:
-\begin{figure}[H]
-\begin{center}
-\includegraphics[width=0.9\textwidth]{figures/lw/iquest-orm.png} 
-\end{center}
-\caption{iQuest ORM}
-\label{fig:iquest-orm}
-\end{figure}
-Klasa danych dziedziczy po klasie \emph{record} oraz implementuje metodę \emph{get\_mapping} interfejsu \emph{irecord}, by uzyskać dostęp do metod komunikacji z bazą danych. Metoda \emph{get\_mapping} pozwala zdefiniować mapowanie danej klasy na odpowiednią relację w bazie danych. Należy przy tym podać mapowania dla atrybutów, tj. nazwy w klasie i bazie danych oraz typ, który zadecyduje o metodzie pobrania/zapisania danej (typem może być także klasa potomna klasy \emph{record}). W przypadku, gdy mamy do czynienia z dziedziczeniem wystarczy zdefiniować przy mapowaniu sposób obsługi dziedziczenia (m.in. jakie pole określa typ klasy). Najważniejszy kod znajduje się w metodzie \emph{get\_instance}, która pobiera konstruktor danej klasy, poprzez refleksję tworzy obiekt z wyłuskanymi z bazy danych parametrami wymaganymi przy jego tworzeniu oraz ustawia resztę pól pobranych z bazy danych. Metody \emph{insert, update, delete} pobierają reprezentację obiektu oczekiwanego przez metody \emph{Data manipulation API} oraz wykonują żądane operacje.\\
-Zastosowane rozwiązanie znacząco poprawiło czytelność kodu poprzez zastosowanie zasady DRY (\emph{Don't repeat yourself}). Projektowałem je, mając na uwadze rozwiązanie, z którym miałem wcześniej styczność, tj. implementację \emph{ActiveRecord} z \emph{Ruby on Rails}. W trakcie pracy nad projektem doceniłem stosowanie konwencji nazewniczych, których obecność znacząco upraszcza projektowanie klas mapujących dane.
-
-%Tutaj znajduje się opis wszystkich Waszych doświadczeń związanych z projektem -- zarówno pozytywnych jak i negatywnych, dotyczących organizacji, środowiska czy samych już kwestii technicznych. To ma być zebranie Waszych wniosków, wraz z prawdopodobnymi nauczkami dla przyszłych roczników. 
-%
-%To dobre miejsce na zaaplikowanie zawartości Lessons Learned Log, jeśli tak prowadziliście, ale też miejsce na własne przemyślenia.
